# data-processing

./: .gitignore
jsons/: main.ipynb  process_pipeline.py  pyproject.toml
jsons/labels/: labeller.py  labels.json
jsons/models/: lstm_with_angle-balanced-weights-epoch-15.keras  lstm_with_angle-balanced-weights-epoch-2000.keras  lstm_with_angle-balanced-weights.keras  lstm_with_angle.keras  lstm_with_angle_early_stopping.keras
jsons/tests/: model_test.py
vids/: angles.txt  pyproject.toml  throws.txt  tools.py
